test/1.4/errors/T_EARGD.dml
/*
  © 2021 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.4;

device test;

/// ERROR EARGD
method m(int x, int x) {
}

template t {
    /// ERROR EARGD
    shared method m(int x, int x);
    /// ERROR EARGD
    shared method n(int x, int x) {}
}

is t;

method init() {
    // Ensure that the bad methods do not become part of the device structure
    /// ERROR EREF
    this.m(1,1);
    /// ERROR EREF
    this.n(1,1);
}
